--- a/index.html
+++ b/index.html
@@ -7,6 +7,12 @@
     <title>Odin Foundations Landing Page</title>
 </head>
 <body>
-    
+    <header>
+        <h2 class="logo">Header Logo</h2>
+        <a href="">header link one</a>
+        <a href="">header link two</a>
+        <a href="">header link three
+        </a>
+    </header>
 </body>
 </html>
