--- a/index.html
+++ b/index.html
@@ -4,15 +4,21 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Odin Foundations Landing Page</title>
 </head>
 <body>
-    <header>
-        <h2 class="logo">Header Logo</h2>
-        <a href="">header link one</a>
-        <a href="">header link two</a>
-        <a href="">header link three
-        </a>
+    <header class="site-header">
+        <h1 class="logo">Header Logo</h1>
+            <nav class="nav">
+                <ul class="nav-list">
+                    <li><a href="#">header link one</a></li>
+                    <li><a href="#">header link two</a></li>
+                    <li><a href="#">header link three</a></li>
+                </ul>
+            </nav>
+        
+        
     </header>
 </body>
 </html>
